# PiP

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
src/: main.py
