[tool.poetry]
name = "pipo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
httpx = "^0.27.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
mypy = "^1.8.0"
black = "^24.2.0"
flake8-bandit = "^4.1.1"
safety = "^3.0.1"
flake8-annotations = "^3.0.1"
darglint = "^1.8.1"
xdoctest = "^1.1.3"
isort = "^5.13.2"
coverage = {extras = ["toml"], version = "^7.4.3"}
pyupgrade = "^3.15.1"
pre-commit = "^3.6.2"
pre-commit-hooks = "^4.5.0"
conventional-pre-commit = "^3.1.0"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
include_namespace_packages = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
lines_after_imports = 2

[tool.mypy]
packages = ["src", "tests"]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
